--- a/Netflix/netflixclone/src/Banner.css
+++ b/Netflix/netflixclone/src/Banner.css
@@ -1,7 +1,7 @@
 .banner {
   color: rgb(255, 255, 255);
   object-fit: contain;
-  height: 448px;
+  height: 480px;
 }
 
 .banner__contents {
@@ -39,8 +39,18 @@
   padding-bottom: 0.5rem;
 }
 
-.banner__button :hover {
+.banner__buttons > button:hover {
   color: black;
   background-color: white;
   transition: all 0.2 sec;
+}
+
+.banner--fadebottom {
+  height: 9.4rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61),
+    #111
+  );
 }
