--- a/Netflix/netflixclone/src/Row.css
+++ b/Netflix/netflixclone/src/Row.css
@@ -1,5 +1,6 @@
 .row {
   margin-left: 20px;
+  color: white;
 }
 
 .row__posters {
@@ -7,6 +8,13 @@
   overflow-y: hidden;
   overflow-x: scroll;
   padding: 20px;
+}
+
+.row__posters > :hover {
+  transform: scale(1.1);
+  cursor: pointer;
+  box-shadow: 0 1.5px 4px rgba(255, 253, 253, 0.3),
+    0 0 40px rgba(248, 235, 235, 0.486) inset;
 }
 
 .row__posters::-webkit-scrollbar {
@@ -18,17 +26,9 @@
   width: 100%;
   max-height: 100px;
   margin-right: 10px;
-  transition: transform 450ms;
-}
-
-.row__poster :hover {
-  transform: scale(1.08);
-  cursor: pointer;
+  transition: transform 400ms;
 }
 
 .row__posterLarge {
   max-height: 250px;
-}
-.row__posterLarge :hover {
-  transform: scale(1.09);
 }
